[tool.poetry]
name = "crawle"
version = "0.1.0"
description = "A multi-threaded web crawler implemented in Python."
authors = ["Yashdeep Sharma <yashdeepsharma@example.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
langchain = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
